[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-memory-system"
version = "0.1.0"
description = "A Beads-inspired issue tracker for AI agent memory"
authors = [{name = "Darron Reed"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.scripts]
ams = "src.cli:ams"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[tool.setuptools]
packages = ["src"]
